--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         kind="subtitles"
         srclang="en"
         label="English"
+        default
       />
       Your browser does not support the audio element.
     </audio>
