--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         label="English"
         default
       />
+      <track
+        src="subtitles_en.vtt"
+        kind="subtitles"
+        srclang="hr"
+        label="Blablasti"
+        default
+      />
       Your browser does not support the audio element.
     </video>
 
