Changed video source

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
   <body>
     <video onload="init()" controls crossorigin="true">
       <!-- <source src="audio.ogg" type="audio/ogg" /> -->
-      <source class="video" src="audio.mp3" type="audio/mpeg" />
+      <source
+        class="video"
+        src="http://iandevlin.github.io/mdn/video-player-with-captions/video/sintel-short.mp4"
+        type="audio/mpeg"
+      />
       <track
         src="subtitles_en.vtt"
         kind="subtitles"
